[package]
name = "Toml2Neo4j"
version = "0.1.0"
edition = "2021"

[lib]
name = "neo4j"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
neo4rs = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
